# ispcrt-c-simple-example

./: .gitignore  README.md  run.sh  simple.c  simple.ispc  vec-add.ispc
.github/workflows/: ispc.yml
240/: run.sh  simple.ispc
double/: run.sh  simple.c  vec-add.ispc
float/: run.sh  simple.c  vec-add.ispc
int/: CMakeLists.txt  run.sh  simple.c  vec-add.ispc
ispc/: nomp.c  transforms.py  vec-add.ispc
ispc-runtime/: simple.c  vec-add.ispc
local/: CMakeLists.txt  simple.c  vec-add.h  vec-add.ispc
long/: run.sh  simple.c  vec-add.ispc
u_long/: run.sh  simple.c  vec-add.ispc
unsigned/: run.sh  simple.c  vec-add.ispc
